fixed overflow of main section, and this fixed the timeevents width===calendar.offsetWidth issue

--- a/public/reset.css
+++ b/public/reset.css
@@ -50,4 +50,6 @@ table {
 html, body {
 	height: 100vh;
 	margin: 0;
+	overflow: hidden
+
 }
